force-app/main/default/objects/Contact/fields/AI_Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Enriched__c</fullName>
    <label>AI Last Enriched</label>
    <type>DateTime</type>
</CustomField>