force-app/main/default/objects/Contact/fields/Auth_Provider__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider__c</fullName>
    <label>Auth Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>