force-app/main/default/objects/Contact/fields/Candidate_Flags__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Flags__c</fullName>
    <label>Candidate Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>