force-app/main/default/objects/Contact/fields/Candidate_Summary__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Summary__c</fullName>
    <label>Candidate Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>