force-app/main/default/objects/Contact/fields/Career_Pathway_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Career_Pathway_Assessment__c</fullName>
    <label>Career Pathway Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>