force-app/main/default/objects/Contact/fields/Industries_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Industries_Of_Interest__c</fullName>
    <label>Industries Of Interest</label>
    <type>TextArea</type>
</CustomField>