force-app/main/default/objects/Contact/fields/Interested_Job_Types__c.field-meta.xml
<CustomField>
    <fullName>Interested_Job_Types__c</fullName>
    <label>Interested Job Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>