force-app/main/default/objects/Contact/fields/Last_Login_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_At__c</fullName>
    <label>Last Login At</label>
    <type>DateTime</type>
</CustomField>