force-app/main/default/objects/Contact/fields/Marketability_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketability_Score__c</fullName>
    <label>Marketability Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>