force-app/main/default/objects/Contact/fields/Preferred_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Locations__c</fullName>
    <label>Preferred Locations</label>
    <type>TextArea</type>
</CustomField>