force-app/main/default/objects/Contact/fields/Protected_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Protected_Employer_Name__c</fullName>
    <label>Protected Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>