force-app/main/default/objects/Contact/fields/Right_To_Work__c.field-meta.xml
<CustomField>
    <fullName>Right_To_Work__c</fullName>
    <label>Right To Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>