force-app/main/default/objects/Contact/fields/Salary_Type__c.field-meta.xml
<CustomField>
    <fullName>Salary_Type__c</fullName>
    <label>Salary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Annual</fullName><default>false</default><label>Annual</label></value>
            <value><fullName>Hourly</fullName><default>false</default><label>Hourly</label></value>
            <value><fullName>Daily</fullName><default>false</default><label>Daily</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>