force-app/main/default/objects/Contact/fields/Skills_Original__c.field-meta.xml
<CustomField>
    <fullName>Skills_Original__c</fullName>
    <label>Skills Original</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>