force-app/main/default/objects/Contact/fields/Social_Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>Social_Subject_Id__c</fullName>
    <label>Social Subject ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>