force-app/main/default/objects/Contact/fields/Visa_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expiry__c</fullName>
    <label>Visa Expiry</label>
    <type>Date</type>
</CustomField>