force-app/main/default/objects/Contact/fields/Willing_To_Relocate__c.field-meta.xml
<CustomField>
    <fullName>Willing_To_Relocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing To Relocate</label>
    <type>Checkbox</type>
</CustomField>